priest and klein

--- a/01-about.Rmd
+++ b/01-about.Rmd
@@ -1,4 +1,4 @@
-# Introduction
+# About this book
 
 O conteúdo desse livro será escrito parte em portugês e parte em inglês. A justificativa dos autores sempre será "escrevi como me senti mais confortável".
 
