--- a/bibliography/book.bib
+++ b/bibliography/book.bib
@@ -1,3 +1,22 @@
+@article{lee2016priest,
+  title={The Priest-Klein hypotheses: Proofs and generality},
+  author={Lee, Yoon-Ho Alex and Klerman, Daniel},
+  journal={International Review of Law and Economics},
+  volume={48},
+  pages={59--76},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{gelbach2016reduced,
+  title={The Reduced Form of Litigation Models and the Plaintiff's Win Rate},
+  author={Gelbach, Jonah B},
+  year={2016},
+  publisher={University of Pennsylvania Law School},
+  journal={Research paper},
+  number={16-22}
+}
+
 @Book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
@@ -8,6 +27,30 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+
+@article{loevinger1963jurimetrics,
+  title={Jurimetrics: The methodology of legal inquiry},
+  author={Loevinger, Lee},
+  journal={Law and contemporary problems},
+  volume={28},
+  number={1},
+  pages={5--35},
+  year={1963},
+  publisher={JSTOR}
+}
+
+
+@article{donohue2015empirical,
+  title={Empirical evaluation of law: The dream and the nightmare},
+  author={Donohue III, John J},
+  journal={American Law and Economics Review},
+  volume={17},
+  number={2},
+  pages={313--360},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
 
 @article{Weinstein1997,
   title={Notes for a Discussion of Mass Tort Cases and Class Actions},
