--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -85,3 +85,12 @@ contents={\begin{tikzpicture}[remember picture,overlay]
 {\logo}; % logo goes here
 \end{tikzpicture}}
 }
+
+\usepackage{float}
+\let\origfigure\figure
+\let\endorigfigure\endfigure
+\renewenvironment{figure}[1][2] {
+    \expandafter\origfigure\expandafter[H]
+} {
+    \endorigfigure
+}
